--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="styles/style.css"/>
-  <title>Hello, World!</title>
+  <title>idiot</title></title>
 </head>
 <body>
   <h1>
-    Hello, World!
+    huh?i told you dont click the button!
   </h1>
+  <p>go out now!!!!!!</p>
 </body>
 </html>
